fixed styling to account for off center modal click, but still allow a menu switch to happen when this occurs

--- a/src/styles/components/Header/header.module.css
+++ b/src/styles/components/Header/header.module.css
@@ -119,8 +119,13 @@
 }
 
 .appBarLink {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: #001f3f;
+  width: 100%;
+  height: 100%;
 }
 
 .appBarSignOutListItem {
